--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                 </div>
             </div>
         </div>
+        <p>
+            Hosted with <a href="https://www.netlify.com">Netlify</a>
+        </p>
         <script src="script.js"></script>
 </body>
 
