--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
         </div>
         <p>
-            Hosted with <a href="https://www.netlify.com">Netlify</a>
+            Hosted with <a href="https://festive-knuth-76ffed.netlify.app">Netlify</a>
         </p>
         <script src="script.js"></script>
 </body>
