updated the Github link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
             </div>
         </div>
         <p>
-            Hosted with <a href="https://festive-knuth-76ffed.netlify.app">Netlify</a>
+     <a href="https://festive-knuth-76ffed.netlify.app" target="blank">"Netlify"</a>
+by Korine Okello"
         </p>
         <script src="script.js"></script>
 </body>
