--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
         </div>
         <p>
-     <a href="https://festive-knuth-76ffed.netlify.app" target="blank">"Netlify"</a>
+     <a href="https://festive-knuth-76ffed.netlify.app" target="blank">Netlify</a>
 by Korine Okello"
         </p>
         <script src="script.js"></script>
