added a current button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary" value="Search">Search</button>
                         </div>
+                        <button id="weather-refresh" class="float-left btn btn-success">Current Location</button>
                     </form>
                 </div>
             </div>
@@ -89,8 +90,8 @@
             </div>
         </div>
         <p>
-     <a href="https://festive-knuth-76ffed.netlify.app" target="blank">Netlify</a>
-by Korine Okello"
+     <a href="https://festive-knuth-76ffed.netlify.app" target="blank">Open-source code</a>
+by Korine Okello
         </p>
         <script src="script.js"></script>
 </body>
