--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
             <div class="row">
                 <div class="col-6">
                     <span class="current-temp" id="current-temp"></span>
+                    <img src="" alt="clear" id="icon" class="float-right"/>
                     <span class="units">
-                        <a href="#" id="fahrenheit-link">°F</a> |
-                        <a href="#" id="celsius-link">°C</a>
+                        <a href="#" id="celsius-link">°C</a> |
+                        <a href="#" id="fahrenheit-link">°F</a>
 
                     </span>
                     <p id="other-info">
