--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
                     <span class="units">
                         <a href="#" id="celsius-link">°C</a> |
                         <a href="#" id="fahrenheit-link">°F</a>
-
                     </span>
-                    <p id="other-info">
-                        Precip. Info
-                    </p>
+                <div class="col-6">
+                    <ul>
+                        <li> Humidity:<span id="humidity"></span>% </li>
+                        <li>Wind: <span id="wind"></span>km/h</li>
+                    </ul>
                 </div>
             </div>
         </div>
