--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-6">
                     <span class="current-temp" id="current-temp"></span>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx4HoYZLKsXHzle-EN5ExuKV7d61K3zHrKCw&usqp=CAU" alt="clear" id="icon" class="float-right"/>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx4HoYZLKsXHzle-EN5ExuKV7d61K3zHrKCw&usqp=CAU" alt="clear" id="icon" class="float-left/>
                     <span class="units">
                         <a href="#" id="celsius-link">°C</a> |
                         <a href="#" id="fahrenheit-link">°F</a>
