Added weather description to index.html and script.js

--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
                         </div>
                         <button id="weather-refresh" class="float-left btn btn-success">Current Location</button>
                     </form>
+
                 </div>
             </div>
         </div>
+<div class="overview">
+    <h1 id="city"></h1>
+    <ul>
+        <li id="description"></li>
+    </ul>
+</div>
+
         <div class="todays-weather">
             <div class="row">
                 <div class="col-6">
