--- a/index.html
+++ b/index.html
@@ -38,21 +38,22 @@
         </div>
 <div class="overview">
     <h1 id="city"></h1>
-    <ul>
-        <li id="description"></li>
-    </ul>
+    
 </div>
 
         <div class="todays-weather">
             <div class="row">
                 <div class="col-6">
                     <span class="current-temp" id="current-temp"></span>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQx4HoYZLKsXHzle-EN5ExuKV7d61K3zHrKCw&usqp=CAU" alt="clear" id="icon" class="float-left"/>
+                    <img src="" alt="Clear" id="icon" class="float-left" />
                     <span class="units">
                         <a href="#" id="celsius-link">°C</a> |
                         <a href="#" id="fahrenheit-link">°F</a>
                     </span>
                 <div class="col-6">
+                    <ul>
+                        <li id="description"></li>
+                    </ul>
                     <ul>
                         <li> Humidity:<span id="humidity"></span>% </li>
                         <li>Wind: <span id="wind"></span>km/h</li>
