Added weather forecast to index.html and script.js

--- a/index.html
+++ b/index.html
@@ -99,10 +99,13 @@
                     </div>
                 </div>
             </div>
+            <div class="row weather-forecast" id="forecast"></div>
         </div>
-        <p>
+        <p class="footer">
+            <small>
      <a href="https://festive-knuth-76ffed.netlify.app" target="blank">Open-source code</a>
 by Korine Okello 
+            </small>
         </p>
         <script src="script.js"></script>
 </body>
