--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <span class="current-temp" id="current-temp"></span>
                     <img src="" alt="Clear" id="icon" class="float-left" />
                     <span class="units">
-                        <a href="#" id="celsius-link">°C</a> |
-                        <a href="#" id="fahrenheit-link">°F</a>
+                        <a href="#" id="fahrenheit-link">°F</a> |
+                        <a href="#" id="celsius-link">°C</a> 
                     </span>
                 <div class="col-6">
                     <ul>
