--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
         </div>
         <p class="footer">
             <small>
-     <a href="https://festive-knuth-76ffed.netlify.app" target="blank">Open-source code</a>
-by Korine Okello 
+                This project was coded
+                by Korine Okello and is
+     <a href= "https://festive-knuth-76ffed.netlify.app" target="_blank">Open-source code on GitHub</a> hosted on 
+    <a href="https://www.netlify.com/" target="_blank">Netlify.</a>
             </small>
         </p>
         <script src="script.js"></script>
