--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 This project was coded
                 by Korine Okello and is
      <a href= "https://festive-knuth-76ffed.netlify.app" target="_blank">Open-source code on GitHub</a> hosted on 
-    <a href="https://www.netlify.com/" target="_blank">Netlify.</a>
+    <a href="https://app.netlify.com/teams/korine941/overview" target="_blank">Netlify.</a>
             </small>
         </p>
         <script src="script.js"></script>
