--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p class="footer">
             <small>
                 This project was coded
-                by Korine Okello and is
+                by Korine Okello Moore and is
      <a href= "https://festive-knuth-76ffed.netlify.app" target="_blank">Open-source code on GitHub</a> hosted on 
     <a href="https://app.netlify.com/teams/korine941/overview" target="_blank">Netlify.</a>
             </small>
